# PythonBackendDIO

Python_DIO/: boas_praticas.py  pyproject.toml
Python_DIO/Desenvolvimento de APIs em Python com Flask/dio_bank/: pyproject.toml
Python_DIO/Desenvolvimento de APIs em Python com Flask/dio_bank/instance/: blog.sqlite
Python_DIO/Desenvolvimento de APIs em Python com Flask/dio_bank/migrations/versions/: 18a483238ce8_initial_migration.py  652ec0fb95d2_initial_migration.py  6c79747c314f_add_password_field.py
Python_DIO/Desenvolvimento de APIs em Python com Flask/dio_bank/src/: app.py  utils.py
Python_DIO/Desenvolvimento de APIs em Python com Flask/dio_bank/src/controllers/: auth.py  post.py  role.py  user.py
Python_DIO/Desenvolvimento de APIs em Python com Flask/dio_bank/tests/: test_utils.py
Python_DIO/Modulo1/: 02_injecao_sql.py  db_api.py  meu_banco.db
