[project]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "augustoo999",email = "pbernardoguilherme@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=2.2)",
    "flask-sqlalchemy (>=3.0)",
    "flask-migrate",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-ra -vvv"
testpaths = [
    "tests"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
